--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="/img/icon.png" />
+    <link rel="shortcut icon" type="image/png" href="img/icon.png" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
@@ -27,7 +27,7 @@
         />
         <!-- In practice, use type="password" -->
         <input
-          type="text"
+          type="password"
           placeholder="PIN"
           maxlength="4"
           class="login__input login__input--pin"
@@ -104,7 +104,7 @@
           <input type="text" class="form__input form__input--user" />
           <input
             type="password"
-            maxlength="6"
+            maxlength="4"
             class="form__input form__input--pin"
           />
           <button class="form__btn form__btn--close">&rarr;</button>
@@ -120,7 +120,7 @@
     </main>
 
     <!-- <footer>
-      &copy; by Asmir Pljakic.
+      &copy; by Asmir Pljakić.
     </footer> -->
 
     <script src="js/script.js"></script>
