--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
-      <p class="welcome">Log in to get started</p>
+      <p class="welcome">Log in to get started &#149;</p>
       <img src="img/logo.png" alt="Logo" class="logo" />
       <form class="login">
         <input
