--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started &#149;</p>
-      <a href="https://github.com/Topgallantt" target="_blank"
+      <a href="https://github.com/asmirpljakic" target="_blank"
         ><img src="img/logo.png" alt="Logo" class="logo" />
       </a>
       <form class="login">
@@ -125,25 +125,6 @@
         You will be logged out in <span class="timer">05:00</span>
       </p>
     </main>
-
-    <!-- Footer -->
-    <!-- <footer class="footer">
-      <a href="https://github.com/Topgallantt" target="_blank"
-        ><img src="img/icon.png" alt="Logo" class="footer__logo" />
-      </a>
-
-      <p class="footer__copyright">
-        &copy; Copyright by
-        <a
-          class="footer__link"
-          target="_blank"
-          href="https://github.com/Topgallantt"
-          >Asmir Pljakić</a
-        >
-      </p>
-    </footer> -->
-    <!-- Footer END -->
-
     <script src="js/script.js"></script>
   </body>
 </html>
